# Future-of-the-Emerald-Isle

./: CMakeLists.txt  README.md
src/: box.frag  box.vert  building.cpp  building.h  camera.cpp  camera.h  main.cpp  shader.cpp  shader.h  skybox.cpp  skybox.h  static_model.cpp  static_model.h  surface.cpp  surface.h
src/assets/island_tree/: island_tree_01_1k.gltf
src/assets/jacaranda_tree/: jacaranda_tree_1k.gltf
src/render/: shader.h
src/shaders/: depth.vert  lighting.frag  lighting.vert  simple.frag  simple.vert  skybox.frag  skybox.vert
